packages/next-swc/crates/core/tests/errors/next-font-loaders/arg-not-object/input.js
import { Inter, Sacramento } from '@next/font/google'
const obj = {}
const s = Sacramento(obj)
const s = Sacramento(10)
